--- a/spec/vcr_cassettes/sp_2222.yml
+++ b/spec/vcr_cassettes/sp_2222.yml
@@ -35,97 +35,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 5A6E:E40C:395ED3:40A3D8:62D10D73
+      - 1D1C:0D3D:3D72EB:427CB2:62DBEC0F
       Accept-Ranges:
       - bytes
       Date:
-      - Fri, 15 Jul 2022 06:47:15 GMT
+      - Sat, 23 Jul 2022 12:39:43 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6373-VIE
+      - cache-sof1510043-SOF
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1657867635.096179,VS0,VE157
+      - S1658579984.539045,VS0,VE179
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 6f2e5c57f93c53fbfc800727d9f75868af36887e
+      - 9f1a6057c5d6f672aed02664e739a6b599a5162a
       Expires:
-      - Fri, 15 Jul 2022 06:52:15 GMT
+      - Sat, 23 Jul 2022 12:44:43 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Fri, 15 Jul 2022 06:47:15 GMT
-- request:
-    method: get
-    uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_2222.yaml
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 404
-      message: Not Found
-    headers:
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '14'
-      Content-Security-Policy:
-      - default-src 'none'; style-src 'unsafe-inline'; sandbox
-      Strict-Transport-Security:
-      - max-age=31536000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - deny
-      X-Xss-Protection:
-      - 1; mode=block
-      Content-Type:
-      - text/plain; charset=utf-8
-      X-Github-Request-Id:
-      - 5A6E:E40C:395ED3:40A3D8:62D10D73
-      Accept-Ranges:
-      - bytes
-      Date:
-      - Fri, 15 Jul 2022 06:47:15 GMT
-      Via:
-      - 1.1 varnish
-      X-Served-By:
-      - cache-vie6339-VIE
-      X-Cache:
-      - HIT
-      X-Cache-Hits:
-      - '1'
-      X-Timer:
-      - S1657867635.373879,VS0,VE0
-      Vary:
-      - Authorization,Accept-Encoding,Origin
-      Access-Control-Allow-Origin:
-      - "*"
-      X-Fastly-Request-Id:
-      - ce9ee4f030f90c84a11ae91afd199a71dced6a2e
-      Expires:
-      - Fri, 15 Jul 2022 06:52:15 GMT
-      Source-Age:
-      - '0'
-    body:
-      encoding: UTF-8
-      string: '404: Not Found'
-  recorded_at: Fri, 15 Jul 2022 06:47:15 GMT
+  recorded_at: Sat, 23 Jul 2022 12:39:43 GMT
 recorded_with: VCR 6.1.0
