--- a/spec/vcr_cassettes/sp_2222.yml
+++ b/spec/vcr_cassettes/sp_2222.yml
@@ -35,33 +35,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 1D1C:0D3D:3D72EB:427CB2:62DBEC0F
+      - C762:0817:226D19:268CC1:6300BA2E
       Accept-Ranges:
       - bytes
       Date:
-      - Sat, 23 Jul 2022 12:39:43 GMT
+      - Sat, 20 Aug 2022 10:40:46 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-sof1510043-SOF
+      - cache-vie6333-VIE
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1658579984.539045,VS0,VE179
+      - S1660992047.756775,VS0,VE171
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 9f1a6057c5d6f672aed02664e739a6b599a5162a
+      - c5b3becb2f9d61225a00bf975e96b0d6c1b7047a
       Expires:
-      - Sat, 23 Jul 2022 12:44:43 GMT
+      - Sat, 20 Aug 2022 10:45:46 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Sat, 23 Jul 2022 12:39:43 GMT
+  recorded_at: Sat, 20 Aug 2022 10:40:46 GMT
 recorded_with: VCR 6.1.0
