--- a/spec/vcr_cassettes/sp_800_90c.yml
+++ b/spec/vcr_cassettes/sp_800_90c.yml
@@ -35,33 +35,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - '08E6:7354:4E21DE:53E894:62DBEC0D'
+      - DC58:52BA:3A1419:4971EA:6300BA2D
       Accept-Ranges:
       - bytes
       Date:
-      - Sat, 23 Jul 2022 12:39:42 GMT
+      - Sat, 20 Aug 2022 10:40:45 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-sof1510056-SOF
+      - cache-vie6377-VIE
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1658579982.971918,VS0,VE182
+      - S1660992045.297005,VS0,VE164
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - '09b738cb330b3f096fcbaced88b83d042069aa7b'
+      - 58c2e406feb95474df20b5b1d1a953fb3b182c32
       Expires:
-      - Sat, 23 Jul 2022 12:44:42 GMT
+      - Sat, 20 Aug 2022 10:45:45 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Sat, 23 Jul 2022 12:39:42 GMT
+  recorded_at: Sat, 20 Aug 2022 10:40:45 GMT
 recorded_with: VCR 6.1.0
