--- a/spec/vcr_cassettes/sp_2222.yml
+++ b/spec/vcr_cassettes/sp_2222.yml
@@ -35,33 +35,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - C762:0817:226D19:268CC1:6300BA2E
+      - B52E:2FFE:533B07:892BFA:638DE34B
       Accept-Ranges:
       - bytes
       Date:
-      - Sat, 20 Aug 2022 10:40:46 GMT
+      - Mon, 05 Dec 2022 12:25:48 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6333-VIE
+      - cache-atl18426-ATL
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1660992047.756775,VS0,VE171
+      - S1670243148.919759,VS0,VE190
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - c5b3becb2f9d61225a00bf975e96b0d6c1b7047a
+      - 33a6058f179c57bd1d85c3a92f2921c9d7c78035
       Expires:
-      - Sat, 20 Aug 2022 10:45:46 GMT
+      - Mon, 05 Dec 2022 12:30:48 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Sat, 20 Aug 2022 10:40:46 GMT
+  recorded_at: Mon, 05 Dec 2022 12:25:48 GMT
 recorded_with: VCR 6.1.0
