--- a/spec/vcr_cassettes/sp_800_90c.yml
+++ b/spec/vcr_cassettes/sp_800_90c.yml
@@ -35,33 +35,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - DC58:52BA:3A1419:4971EA:6300BA2D
+      - 2C8A:0AE5:B48AA7:F2B7C4:638DE34A
       Accept-Ranges:
       - bytes
       Date:
-      - Sat, 20 Aug 2022 10:40:45 GMT
+      - Mon, 05 Dec 2022 12:25:47 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6377-VIE
+      - cache-atl18438-ATL
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1660992045.297005,VS0,VE164
+      - S1670243147.884576,VS0,VE133
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 58c2e406feb95474df20b5b1d1a953fb3b182c32
+      - f14f0205a1eb23e462432ea10ad4a59dc76478e4
       Expires:
-      - Sat, 20 Aug 2022 10:45:45 GMT
+      - Mon, 05 Dec 2022 12:30:47 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Sat, 20 Aug 2022 10:40:45 GMT
+  recorded_at: Mon, 05 Dec 2022 12:25:46 GMT
 recorded_with: VCR 6.1.0
