--- a/spec/vcr_cassettes/sp_800_90c.yml
+++ b/spec/vcr_cassettes/sp_800_90c.yml
@@ -35,33 +35,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 2C8A:0AE5:B48AA7:F2B7C4:638DE34A
+      - 8CBA:7B57:9369E9:C4867F:63C2FBBE
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 05 Dec 2022 12:25:47 GMT
+      - Sat, 14 Jan 2023 19:00:14 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-atl18438-ATL
+      - cache-iad-kcgs7200126-IAD
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1670243147.884576,VS0,VE133
+      - S1673722814.389933,VS0,VE90
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - f14f0205a1eb23e462432ea10ad4a59dc76478e4
+      - ce43f10eee709e9a858272d994ce16a20b6a997c
       Expires:
-      - Mon, 05 Dec 2022 12:30:47 GMT
+      - Sat, 14 Jan 2023 19:05:14 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Mon, 05 Dec 2022 12:25:46 GMT
+  recorded_at: Sat, 14 Jan 2023 19:00:14 GMT
 recorded_with: VCR 6.1.0
