--- a/lib/relaton_nist/series.yaml
+++ b/lib/relaton_nist/series.yaml
@@ -22,7 +22,7 @@ MONO: Monographs
 MP: Miscellaneous Publications
 NCSTAR: National Construction Safety Team Act Reports
 NSRDS: National Standard Reference Data Series
-IR: NISTIRs (Interagency/Internal Reports)
+IR: IR (Interagency/Internal Reports)
 OWMWP: Office of Weights and Measures White Papers
 PC: Photographic Circulars
 RPT: NBS Reports
